First fully functioning version of GUI for testing